2013-09-23  Sergio Martin <sergio.martin@artica.es>

	* include/functions_groups.php: Fix groups in tree way
	when All group is not exist

2013-09-22  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_alert_config.php: Translated new sentences.
	
2013-09-22  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_module_macros.php,
	include/help/ja/help_alert_macros.php: Translated new sentences.

2013-09-20  Sergio Martin <sergio.martin@artica.es>

	* godmode/alerts/alert_list.list.php
	godmode/alerts/alert_list.builder.php: Fix the alerts creation
	to allow create an alert with default action. bug #2353
	Improve default actions string too.

2013-09-18 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/alerts/configure_alert_action.php: Fix update
	process of alert actions when group is not ALL.
	
2013-09-20  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/estado_monitores.php
	godmode/agentes/module_manager.php: Fixing translation
	of adopted modules and reestructure translations calls
	to do the translations more efecctively for bug #2375

	* general/login_help_dialog.php: Fix size
	of the login help dialog

2013-09-19  Sergio Martin <sergio.martin@artica.es>

	* include/functions_groups.php
	godmode/groups/group_list.php: Fix groups view pagination
	and other internal fail retrieving the groups in tree way

2013-09-18 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_modules.php: Module name checking 
	for invalid characters added at creation time.

2013-09-16  Vanessa Gil <vanessa.gil@artica.es>

	* include/languages/ar.mo
	  include/languages/ar.po
	  include/languages/ast.mo
	  include/languages/ast.po
	  include/languages/bn.mo
	  include/languages/bn.po
	  include/languages/bg.mo
	  include/languages/bg.po
	  include/languages/ca.mo
	  include/languages/ca.po
 	  include/languages/cs.mo
	  include/languages/cs.po
	  include/languages/da.mo
	  include/languages/da.po
	  include/languages/de.mo