@@ -1,3 +1,12 @@
+2013-09-23 Miguel de Dios <miguel.dedios@artica.es>
+	
+	* extensions/update_manager.php,
+	extensions/update_manager/main.php: more comments for to make more
+	easy the code.
+	
+	* extensions/update_manager/update_pandora.php: fixed lost include
+	graph functions for to show progress bar.
+
 2013-09-23  Sergio Martin <sergio.martin@artica.es>
 
 	* include/functions_groups.php: Fix groups in tree way
